# snake_game

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  quality.yml
features/: cli.feature
features/steps/: cli.py
src/snake_game/: __main__.py  cli.py  dog.py  food.py  main.py  score.py  screen_setup.py  snake.py
