#https://packaging.python.org/en/latest/tutorials/packaging-projects/ ----*----*----*----*----*----*----*----*----*----*
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html ----*----*----*----*----*----*----*----*----*----*
[project]
name = "snake_game"
dynamic = ["version"]
description = "test project to read yaml files validate/update and overwrite them"
readme = { file = "README.txt", content-type = "text/markdown" }
authors = [
    { name = "Ivan Pina", email = "cs.ip.mt@gmail.com" }
]
maintainers = [
    { name = "Ivan Pina", email = "cs.ip.mt@gmail.com" }
]
keywords = [
]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

#Library dependencies --*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
dependencies = [
]

[project.optional-dependencies]
cli = [
    "click",
    "rich",
]
docs = [
    "pdoc",
]
lint = [
    "bump-my-version",
    "mypy",
    "ruff",
]
test = [
    "behave[toml]",
    "tox",
]
dev = [
    "snake_game[cli]",
    "snake_game[docs]",
    "snake_game[lint]",
    "snake_game[test]",
]

#Entry Points *----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[project.scripts]
snake_game_cli = "snake_game.cli:cli"

#URLs ---*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[project.urls]
Homepage = "https://github.com/CIvanPiMa/snake_game.git"
Documentation = "https://github.com/CIvanPiMa/snake_game/main/README.md"
Repository = "https://github.com/CIvanPiMa/snake_game.git"
Issues = "https://github.com/CIvanPiMa/snake_game/issues"
Changelog = "https://github.com/CIvanPiMa/snake_game/blob/main/CHANGELOG.md"

#https://setuptools.pypa.io/en/latest/userguide/datafiles.html -*----*----*----*----*----*----*----*----*----*----*----*
[tool.setuptools.package-data]
snake_game = ["*.yml"]

#Documentation ----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
#https://pdoc.dev/docs/pdoc.html#how-can-i
#https://github.com/mitmproxy/pdoc/tree/main/examples
#$ pdoc -o docs/ src/snake_game

#https://callowayproject.github.io/bump-my-version/reference/configuration/ ---*----*----*----*----*----*----*----*----*
[tool.bumpversion]
current_version = "1.0.0"
parse = "(?x)(?P<major>0|[1-9]\\d*)\\.(?P<minor>0|[1-9]\\d*)\\.(?P<patch>0|[1-9]\\d*)(?:-(?P<pre_l>[a-zA-Z-]+)(?P<pre_n>0|[1-9]\\d*))?"
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{distance_to_latest_tag}",
    "{major}.{minor}.{patch}",
]
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "src/snake_game/__init__.py"
search = "{current_version}"
replace = "{new_version}"

#https://docs.astral.sh/ruff/settings/ *----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.ruff]
fix = true
line-length = 120
src = ["src", "tests"]
extend-exclude = ["features"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]

#https://mypy.readthedocs.io/en/stable/config_file.html ---*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.mypy]
exclude = ["\\.*venv",]
warn_return_any = true
warn_unreachable = true
#https://behave.readthedocs.io/en/latest/behave/ *----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.behave]
format = "plain"

#https://tox.wiki/en/latest/config.html ----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
#[tool.tox]
